# rustch

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: release.yml
.github/worklflows/: release.yml
src/: ascii.rs  colors.rs  distro.rs  hello.txt  main.rs  system.rs
