[package]
name = "rustch"
version = "1.0.0"
edition = "2021"
authors = ["rustch contributors"]
description = "A lightning-fast Rust-based system information tool with ASCII art logos"
license = "MIT"
repository = "https://github.com/example/rustch"
keywords = ["system", "info", "neofetch", "ascii", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "rustch"
path = "src/main.rs"

[dependencies]
sysinfo = "0.29"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
